start of contact section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
         <i class="devicon-npm-original-wordmark colored"></i>
         <i class="devicon-yarn-plain colored"></i>
       </section>
+      <section id="contact" class="contact">
+        <div class="contact-section">
+          <i class="devicon-linkedin-plain colored"></i>
+          <p>LinkedIn</p>
+        </div>
+        <div class="contact-section">
+          <i class="devicon-github-plain" style="color: white"></i>
+          <p>GitHub</p>
+        </div>
+        <div class="contact-section">
+          <i class="devicon-linkedin-plain"></i>
+          <p>Email</p>
+        </div>
+      </section>
     </main>
   </div>
 </body>
