working contact section and changes to section switching method

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+  <script src="https://use.fontawesome.com/26a7a10828.js"></script>
   <script src="app.js"></script>
-  <title>Document</title>
+  <title>Sriram Sivarajah</title>
 </head>
 <body>
   <header>
@@ -71,20 +72,28 @@
         <i class="devicon-yarn-plain colored"></i>
       </section>
       <section id="contact" class="contact">
+        <a href="http://linkedin.com/in/sriram-sivarajah" target="_blank">
+          <div class="contact-section">
+            <i class="devicon-linkedin-plain colored"></i>
+            <p>LinkedIn</p>
+            <div class="link-indicator"></div>
+          </div>
+        </a>
+        <a href="http://github.com/sriram-siv" target="_blank">
+          <div class="contact-section">
+            <i class="devicon-github-plain" style="color: white"></i>
+            <p>GitHub</p>
+            <div class="link-indicator"></div>
+          </div>
+        </a>
         <div class="contact-section">
-          <i class="devicon-linkedin-plain colored"></i>
-          <p>LinkedIn</p>
-        </div>
-        <div class="contact-section">
-          <i class="devicon-github-plain" style="color: white"></i>
-          <p>GitHub</p>
-        </div>
-        <div class="contact-section">
-          <i class="devicon-linkedin-plain"></i>
+          <img src="./send.svg" alt="paper-plane">
           <p>Email</p>
+          <div class="link-indicator"></div>
         </div>
       </section>
     </main>
   </div>
+  <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 </body>
 </html>
