volunteerhub text content and added profile picture

--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
     <main>
 
       <section id="about" class="about">
-        &nbsp;I initially approached a career in tech through self-driven learning; I took part in the CS50 online course from Harvard introducing technical and theoretical aspects of software engineering and found it very engaging.
-        <br/>
-        &nbsp;I built on this with the immersive course at General Assembly which introduced me to the industry standard workflow and technologies and gave me a great opportunity to produce interesting, modern projects.
-        <br/>
-        <br/>
-        &nbsp;In my previous roles in hospitality I led my teams to provide people with memorable experiences, through attention to detail and creativity within an often high-pressure environment.
-        <br/>
-        &nbsp;I was inspired to switch careers to tech because I want to help continue its transformative impact on people's lives by providing the tools to make the most of their skills and creativity.
+        <img src="./images/profile-bw.jpg" alt="Sriram Sivarajah">
+        <p>
+          &nbsp;I initially approached a career in tech through self-driven learning; I took part in the CS50 online course from Harvard introducing technical and theoretical aspects of software engineering and found it very engaging.
+          <br/>
+          &nbsp;I built on this with the immersive course at General Assembly which introduced me to the industry standard workflow and technologies and gave me a great opportunity to produce interesting, modern projects.
+          <br/>
+          <br/>
+          &nbsp;In my previous roles in hospitality I led my teams to provide people with memorable experiences, through attention to detail and creativity within an often high-pressure environment.
+          <br/>
+          &nbsp;I was inspired to switch careers to tech because I want to help continue its transformative impact on people's lives by providing the tools to make the most of their skills and creativity.
+        </p>
       </section>
 
       <section id="tech" class="tech">
@@ -76,15 +79,47 @@
         <div class="contact-section">
           <img src="./images/send.svg" alt="paper-plane" class="plane-icon">
           <p>sriramsivarajah<br/>@gmail.com</p>
-          <!-- <p>Email</p> -->
         </div>
       </section>
 
       <section id="projects" class="projects">
         <div class="project-show">
           <img src="./images/popquest-thumb.png" alt="">
+          <div class="project-links">
+            <a href="">VolunteerHub</a>
+            <a href="">GitHub Repo</a>
+          </div>
           <p>
-            &nbsp;A app built using the MERN stack for creating and finding routes to discover new places.
+            &nbsp;Coordinate volunteers and find community projects to get involved with.
+            <br/>
+            &nbsp;Volunteer Hub allows organisers of volunteer driven projects to attract and
+            organise people; they can be arranged into groups according to their speicifed skillsets
+            and schedule availabilty using the inbuilt tools.
+            <br/>
+            &nbsp;These groups can then be organsied using the group-chat feature, as well as posting
+            notices to the community noticeboard.
+            <br/>
+            &nbsp;Volunteers can sign up and find local campaigns for causes that they want to get behind
+            or find specific campaigns that suit their skills.
+            <br/>
+            <br/>
+            <span class="project-tech-header">Built with</span>
+          </p>
+          <div class="project-tech">
+            <i class="devicon-javascript-plain colored"></i>
+            <i class="devicon-html5-plain-wordmark colored"></i>
+            <i class="devicon-css3-plain-wordmark colored"></i>
+            <i class="devicon-sass-original colored"></i>
+            <i class="devicon-react-original-wordmark colored"></i>
+            <i class="devicon-python-plain colored"></i>
+            <i class="devicon-postgresql-plain" style="color: #3d8fc6"></i>
+            <i class="devicon-django-plain" style="color: #38ca69"></i>
+          </div>
+        </div>
+        <div class="project-show extra-project">
+          <img src="./images/popquest-thumb.png" alt="">
+          <p>
+            &nbsp;An app built using the MERN stack for creating and finding routes to discover new places.
             <br/>
             &nbsp;Routes can be designed as a simple walking tour with descriptions or as an interactive
             game in the style of a treasure hunt, with the ability to trigger the
@@ -108,20 +143,6 @@
           </div>
         </div>
         <div class="project-show extra-project">
-          <img src="./images/popquest-thumb.png" alt="">
-          <p>
-            &nbsp;A app built using the MERN stack for creating and finding routes to discover new places.
-            <br/>
-            &nbsp;Routes can be designed as a simple walking tour with descriptions or as an interactive
-            game in the style of a treasure hunt, with the ability to trigger the
-            next stop with a location based question or a proximity check that only shows the
-            next stop when the player has successfully found the next area using the provided clue.
-            <br/>
-            &nbsp;Popquest lets you follow your favourite creators and compete against other users by
-            recording the fastest times on interactive routes.
-          </p>
-        </div>
-        <div class="project-show extra-project">
           <img src="./images/tetris-thumb.png" alt="">
           <p>
             &nbsp;A recreation of the classic game using core web technologies.
@@ -137,8 +158,8 @@
           </p>
           <div class="project-tech">
             <i class="devicon-html5-plain-wordmark colored"></i>
-            <i class="devicon-css3-plain-wordmark colored"></i>
             <i class="devicon-javascript-plain colored"></i>
+            <i class="devicon-css3-plain-wordmark colored"></i>
           </div>
         </div>
         <div class="project-show extra-project">
