changed the typeface

--- a/index.html
+++ b/index.html
@@ -86,24 +86,23 @@
         <div class="project-show">
           <img src="./images/popquest-thumb.png" alt="">
           <div class="project-links">
-            <a href="">VolunteerHub</a>
-            <a href="">GitHub Repo</a>
+            <a href="">
+              <img src="./images/external-link.svg" alt="">
+            </a>
+            <a href="">
+              <i class="devicon-github-plain" style="color: white"></i>
+            </a>
           </div>
           <p>
-            &nbsp;Coordinate volunteers and find community projects to get involved with.
+            &nbsp;Coordinate volunteers and find community projects to get involved with in your area.
             <br/>
             &nbsp;Volunteer Hub allows organisers of volunteer driven projects to attract and
-            organise people; they can be arranged into groups according to their speicifed skillsets
+            organise people; they can be arranged into groups according to their specified skill sets
             and schedule availabilty using the inbuilt tools.
             <br/>
-            &nbsp;These groups can then be organsied using the group-chat feature, as well as posting
-            notices to the community noticeboard.
+            &nbsp;These groups can then be organsied using the group-chat feature or by posting
+            to the community noticeboard.
             <br/>
-            &nbsp;Volunteers can sign up and find local campaigns for causes that they want to get behind
-            or find specific campaigns that suit their skills.
-            <br/>
-            <br/>
-            <span class="project-tech-header">Built with</span>
           </p>
           <div class="project-tech">
             <i class="devicon-javascript-plain colored"></i>
@@ -118,19 +117,24 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/popquest-thumb.png" alt="">
+          <div class="project-links">
+            <a href="">
+              <img src="./images/external-link.svg" alt="">
+            </a>
+            <a href="">
+              <i class="devicon-github-plain" style="color: white"></i>
+            </a>
+          </div>
           <p>
-            &nbsp;An app built using the MERN stack for creating and finding routes to discover new places.
+            &nbsp;Create and find routes to discover new places.
             <br/>
             &nbsp;Routes can be designed as a simple walking tour with descriptions or as an interactive
             game in the style of a treasure hunt, with the ability to trigger the
             next stop with a location based question or a proximity check that only shows the
-            next stop when the player has successfully found the next area using the provided clue.
-            <br/>
-            &nbsp;Popquest lets you follow your favourite creators and compete against other users by
-            recording the fastest times on interactive routes.
+            next stop when the player has successfully found the right location using the provided clues.
             <br/>
             <br/>
-            <span class="project-tech-header">Built with</span>
+            <br/>
           </p>
           <div class="project-tech">
             <i class="devicon-javascript-plain colored"></i>
@@ -144,6 +148,14 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/tetris-thumb.png" alt="">
+          <div class="project-links">
+            <a href="">
+              <img src="./images/external-link.svg" alt="">
+            </a>
+            <a href="">
+              <i class="devicon-github-plain" style="color: white"></i>
+            </a>
+          </div>
           <p>
             &nbsp;A recreation of the classic game using core web technologies.
             <br/>
@@ -154,7 +166,6 @@
             &nbsp;This project was heavily reliant on smooth user-experience and polished presentation.
             <br/>
             <br/>
-            <span class="project-tech-header">Built with</span>
           </p>
           <div class="project-tech">
             <i class="devicon-html5-plain-wordmark colored"></i>
@@ -164,6 +175,14 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/newsfeed-thumb.png" alt="">
+          <div class="project-links">
+            <a href="">
+              <img src="./images/external-link.svg" alt="">
+            </a>
+            <a href="">
+              <i class="devicon-github-plain" style="color: white"></i>
+            </a>
+          </div>
           <p>
             &nbsp;A 2 day hackathon project for creating a front end to consume the News API,
             presenting the information in a clean and readable format with a vibrant style and
@@ -173,8 +192,6 @@
             source or country. From the results, the user can build a customised new feed that
             will populate the front page upon revisiting.
             <br/>
-            <br/>
-            <span class="project-tech-header">Built with</span>
           </p>
           <div class="project-tech">
             <i class="devicon-html5-plain-wordmark colored"></i>
