changing the font size of about section

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <section id="about" class="about">
         <img src="./images/profile-bw.jpg" alt="Sriram Sivarajah">
         <p>
-          &nbsp;I initially approached a career in tech through self-driven learning; I took part in the CS50 online course from Harvard introducing technical and theoretical aspects of software engineering and found it very engaging.
+          &nbsp;I initially approached a career in tech through self-driven learning; I took part in the online CS50 course from Harvard and found the technical and theoretical aspects of software engineering very engaging.
           <br/>
-          &nbsp;I built on this with the immersive course at General Assembly which introduced me to the industry standard workflow and technologies and gave me a great opportunity to produce interesting, modern projects.
+          &nbsp;I built on this with the immersive course at General Assembly which introduced me to the industry standard technologies and gave me a great opportunity to produce interesting, modern projects.
           <br/>
           <br/>
           &nbsp;In my previous roles in hospitality I led my teams to provide people with memorable experiences, through attention to detail and creativity within an often high-pressure environment.
           <br/>
-          &nbsp;I was inspired to switch careers to tech because I want to help continue its transformative impact on people's lives by providing the tools to make the most of their skills and creativity.
+          &nbsp;I was inspired to switch careers to tech because I want to be part of its transformative impact on people's lives by providing tools to make the most of their skills and creativity.
         </p>
       </section>
 
@@ -84,12 +84,12 @@
 
       <section id="projects" class="projects">
         <div class="project-show">
-          <img src="./images/popquest-thumb.png" alt="">
+          <img src="./images/volunteer-thumb.png" alt="Volunteer Hub Screenshot">
           <div class="project-links">
-            <a href="">
-              <img src="./images/external-link.svg" alt="">
+            <a href="" target="_blank">
+              <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="">
+            <a href="https://github.com/sriram-siv/sei-project-4" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -100,7 +100,7 @@
             organise people; they can be arranged into groups according to their specified skill sets
             and schedule availabilty using the inbuilt tools.
             <br/>
-            &nbsp;These groups can then be organsied using the group-chat feature or by posting
+            &nbsp;These groups can then be organised using the group-chat feature or by posting
             to the community noticeboard.
             <br/>
           </p>
@@ -116,12 +116,12 @@
           </div>
         </div>
         <div class="project-show extra-project">
-          <img src="./images/popquest-thumb.png" alt="">
+          <img src="./images/popquest-thumb.png" alt="Popquest Screenshot">
           <div class="project-links">
-            <a href="">
-              <img src="./images/external-link.svg" alt="">
+            <a href="https://pop-quest.herokuapp.com/" target="_blank">
+              <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="">
+            <a href="https://github.com/sriram-siv/sei-project-3" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -147,12 +147,12 @@
           </div>
         </div>
         <div class="project-show extra-project">
-          <img src="./images/tetris-thumb.png" alt="">
+          <img src="./images/tetris-thumb.png" alt="Tetris Screenshot">
           <div class="project-links">
-            <a href="">
-              <img src="./images/external-link.svg" alt="">
+            <a href="https://sriram-siv.github.io/sei-project-1/" target="_blank">
+              <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="">
+            <a href="https://github.com/sriram-siv/sei-project-1" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -174,12 +174,12 @@
           </div>
         </div>
         <div class="project-show extra-project">
-          <img src="./images/newsfeed-thumb.png" alt="">
+          <img src="./images/newsfeed-thumb.png" alt="NewsFeed Screenshot">
           <div class="project-links">
-            <a href="">
-              <img src="./images/external-link.svg" alt="">
+            <a href="https://news-feed-sriri.netlify.app/" target="_blank">
+              <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="">
+            <a href="https://github.com/sriram-siv/news-feed" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
