cleaning up stylesheet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="title">
       <p>Sriram Sivarajah</p>
-      <p>Full Stack Developer</p>
+      <p>Web Developer</p>
     </div>
     <div class="navigation">
       <span><p data-section="about">About</p></span>
@@ -31,14 +31,16 @@
       <section id="about" class="about">
         <img src="./images/profile-bw.jpg" alt="Sriram Sivarajah">
         <p>
-          &nbsp;I initially approached a career in tech through self-driven learning; I took part in the online CS50 course from Harvard and found the technical and theoretical aspects of software engineering very engaging.
-          <br/>
-          &nbsp;I built on this with the immersive course at General Assembly which introduced me to the industry standard technologies and gave me a great opportunity to produce interesting, modern projects.
-          <br/>
-          <br/>
-          &nbsp;In my previous roles in hospitality I led my teams to provide people with memorable experiences, through attention to detail and creativity within an often high-pressure environment.
-          <br/>
-          &nbsp;I was inspired to switch careers to tech because I want to be part of its transformative impact on people's lives by providing tools to make the most of their skills and creativity.
+          I initially approached a career in tech through self-driven learning; I took part in the online CS50 course from Harvard and found the technical and theoretical aspects of software engineering very engaging.
+        </p>
+        <p>
+          I built on this with the immersive course at General Assembly which introduced me to the industry standard technologies and gave me a great opportunity to produce interesting, modern projects.
+        </p>
+        <p>
+          In my previous roles in hospitality I led my teams to provide people with memorable experiences, through attention to detail and creativity within an often high-pressure environment.
+        </p>
+        <p>
+          I was inspired to switch careers to tech because I want to be part of its transformative impact on people's lives by providing tools to make the most of their skills and creativity.
         </p>
       </section>
 
@@ -76,10 +78,13 @@
             <div class="link-indicator"></div>
           </div>
         </a>
-        <div class="contact-section">
-          <img src="./images/send.svg" alt="paper-plane" class="plane-icon">
-          <p>sriramsivarajah<br/>@gmail.com</p>
-        </div>
+        <a href="mailto:sriramsivarajah@gmail.com" target="_blank">
+          <div class="contact-section">
+            <img src="./images/send.svg" alt="paper-plane" class="plane-icon">
+            <p>Email</p>
+            <div class="link-indicator"></div>
+          </div>
+        </a>
       </section>
 
       <section id="projects" class="projects">
