--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
   <script src="https://use.fontawesome.com/26a7a10828.js"></script>
-  <script type="module" src="app.js"></script>
+  <script src="app.js"></script>
   <title>Sriram Sivarajah</title>
 </head>
 <body>
