changed carousel button position and first try at swipe to move

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="" target="_blank">
               <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="https://github.com/sriram-siv/sei-project-4" target="_blank">
+            <a href="https://github.com/sriram-siv/ga-project-4-volunteerhub" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -126,7 +126,7 @@
             <a href="https://pop-quest.herokuapp.com/" target="_blank">
               <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="https://github.com/sriram-siv/sei-project-3" target="_blank">
+            <a href="https://github.com/sriram-siv/ga-project-3-popquest" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -153,10 +153,10 @@
         <div class="project-show extra-project">
           <img src="./images/tetris-thumb.png" alt="Tetris Screenshot">
           <div class="project-links">
-            <a href="https://sriram-siv.github.io/sei-project-1/" target="_blank">
+            <a href="https://sriram-siv.github.io/ga-project-1-tetris/" target="_blank">
               <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="https://github.com/sriram-siv/sei-project-1" target="_blank">
+            <a href="https://github.com/sriram-siv/ga-project-1-tetris" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -182,7 +182,7 @@
             <a href="https://news-feed-sriri.netlify.app/" target="_blank">
               <img src="./images/external-link.svg" alt="External Link">
             </a>
-            <a href="https://github.com/sriram-siv/news-feed" target="_blank">
+            <a href="https://github.com/sriram-siv/ga-project-2-newsfeed" target="_blank">
               <i class="devicon-github-plain" style="color: white"></i>
             </a>
           </div>
@@ -206,10 +206,10 @@
         </div>
       </section>
       <button class="project-selector prev-project">
-    
+        <div></div>
       </button>
       <button class="project-selector next-project">
-    
+        <div></div>
       </button>
     </main>
 
