made project links persistent

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
-  <script src="https://use.fontawesome.com/26a7a10828.js"></script>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <!-- <script src="https://use.fontawesome.com/26a7a10828.js"></script> -->
   <script src="app.js"></script>
   <title>Sriram Sivarajah</title>
 </head>
@@ -90,15 +91,10 @@
       <section id="projects" class="projects">
         <div class="project-show">
           <img src="./images/volunteer-thumb.png" alt="Volunteer Hub Screenshot">
-          <div class="project-links">
-            <a href="" target="_blank">
-              <img src="./images/external-link.svg" alt="External Link">
-            </a>
-            <a href="https://github.com/sriram-siv/ga-project-4-volunteerhub" target="_blank">
-              <i class="devicon-github-plain" style="color: white"></i>
-            </a>
-          </div>
+          <div class="header-space"></div>
           <p>
+            <span class="project-title">Volunteer Hub</span>
+            <br/>
             &nbsp;Coordinate volunteers and find community projects to get involved with in your area.
             <br/>
             &nbsp;Volunteer Hub allows organisers of volunteer driven projects to attract and
@@ -122,15 +118,10 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/popquest-thumb.png" alt="Popquest Screenshot">
-          <div class="project-links">
-            <a href="https://pop-quest.herokuapp.com/" target="_blank">
-              <img src="./images/external-link.svg" alt="External Link">
-            </a>
-            <a href="https://github.com/sriram-siv/ga-project-3-popquest" target="_blank">
-              <i class="devicon-github-plain" style="color: white"></i>
-            </a>
-          </div>
+          <div class="header-space"></div>
           <p>
+            <span class="project-title">Popquest</span>
+            <br/>
             &nbsp;Create and find routes to discover new places.
             <br/>
             &nbsp;Routes can be designed as a simple walking tour with descriptions or as an interactive
@@ -152,15 +143,10 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/tetris-thumb.png" alt="Tetris Screenshot">
-          <div class="project-links">
-            <a href="https://sriram-siv.github.io/ga-project-1-tetris/" target="_blank">
-              <img src="./images/external-link.svg" alt="External Link">
-            </a>
-            <a href="https://github.com/sriram-siv/ga-project-1-tetris" target="_blank">
-              <i class="devicon-github-plain" style="color: white"></i>
-            </a>
-          </div>
+          <div class="header-space"></div>
           <p>
+            <span class="project-title">Tetris</span>
+            <br/>
             &nbsp;A recreation of the classic game using core web technologies.
             <br/>
             &nbsp;A 1 week solo project where the brief was to reproduce a grid-based game in the browser.
@@ -178,15 +164,10 @@
         </div>
         <div class="project-show extra-project">
           <img src="./images/newsfeed-thumb.png" alt="NewsFeed Screenshot">
-          <div class="project-links">
-            <a href="https://news-feed-sriri.netlify.app/" target="_blank">
-              <img src="./images/external-link.svg" alt="External Link">
-            </a>
-            <a href="https://github.com/sriram-siv/ga-project-2-newsfeed" target="_blank">
-              <i class="devicon-github-plain" style="color: white"></i>
-            </a>
-          </div>
+          <div class="header-space"></div>
           <p>
+            <span class="project-title">NewsFeed</span>
+            <br/>
             &nbsp;A 2 day hackathon project for creating a front end to consume the News API,
             presenting the information in a clean and readable format with a vibrant style and
             simple animations to encourage user engagement.
@@ -205,12 +186,22 @@
           </div>
         </div>
       </section>
-      <button class="project-selector prev-project">
-        <div></div>
-      </button>
-      <button class="project-selector next-project">
-        <div></div>
-      </button>
+      <div class="carousel-header">
+        <div class="project-links">
+          <a class="app-link" href="https://volunteershub.herokuapp.com/" target="_blank">
+            <img src="./images/external-link.svg" alt="External Link">
+          </a>
+          <a class="repo-link" href="https://github.com/sriram-siv/ga-project-4-volunteerhub" target="_blank">
+            <i class="devicon-github-plain" style="color: white"></i>
+          </a>
+        </div>
+        <button class="project-selector prev-project">
+          <div></div>
+        </button>
+        <button class="project-selector next-project">
+          <div></div>
+        </button>
+      </div>
     </main>
 
   </div>
