added name to tech icons

--- a/index.html
+++ b/index.html
@@ -46,22 +46,64 @@
       </section>
 
       <section id="tech" class="tech">
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-react-original-wordmark colored"></i>
-        <i class="devicon-nodejs-plain colored"></i>
-        <i class="devicon-github-plain" style="color: white"></i>
-        <i class="devicon-python-plain colored"></i>
+        <div class="tech-icon">
+          <i class="devicon-javascript-plain colored"></i>
+          <p>JavaScript</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-react-original colored"></i>
+          <p>React</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-nodejs-plain colored"></i>
+          <p>Node.js</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-github-plain" style="color: white"></i>
+          <p>GitHub</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-python-plain colored"></i>
+          <p>Python</p>
+        </div>
         <div class="tech-padding"></div>
-        <i class="devicon-csharp-line" style="color: mediumpurple"></i>
-        <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-css3-plain-wordmark colored"></i>
-        <i class="devicon-sass-original colored"></i>
+        <div class="tech-icon">
+          <i class="devicon-csharp-line" style="color: mediumpurple"></i>
+          <p>C#</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-html5-plain colored"></i>
+          <p>HTML5</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-css3-plain colored"></i>
+          <p>CSS3</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-sass-original colored"></i>
+          <p>Sass</p>
+        </div>
         <div class="tech-padding"></div>
-        <i class="devicon-postgresql-plain" style="color: #3d8fc6"></i>
-        <i class="devicon-mongodb-plain-wordmark colored"></i>
-        <i class="devicon-django-plain" style="color: #38ca69"></i>
-        <i class="devicon-npm-original-wordmark colored"></i>
-        <i class="devicon-yarn-plain colored"></i>
+        <div class="tech-icon">
+          <i class="devicon-postgresql-plain" style="color: #3d8fc6"></i>
+          <p>PostgreSQL</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-mongodb-plain colored"></i>
+          <p>MongoDB</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-django-plain" style="color: #38ca69"></i>
+          <p>Django</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-npm-original-wordmark colored"></i>
+          <p>NPM</p>
+        </div>
+        <div class="tech-icon">
+          <i class="devicon-yarn-plain colored"></i>
+          <p>Yarn</p>
+        </div>
       </section>
 
       <section id="contact" class="contact">
