--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- <script src="https://use.fontawesome.com/26a7a10828.js"></script> -->
   <script src="app.js"></script>
   <title>Sriram Sivarajah</title>
+  <link rel="icon" type="image/png" href="images/favicon.ico">
 </head>
 <body>
   <header>
