fixed github logo to use local file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <p>Node.js</p>
         </div>
         <div class="tech-icon">
-          <i class="devicon-github-plain" style="color: white"></i>
+          <!-- <i class="devicon-github-plain" style="color: white"></i> -->
+          <img src="./images/github-original.svg" alt="GitHub logo">
           <p>GitHub</p>
         </div>
         <div class="tech-icon">
@@ -117,7 +118,8 @@
         </a>
         <a href="http://github.com/sriram-siv" target="_blank" tabindex="-1">
           <div class="contact-section">
-            <i class="devicon-github-plain" style="color: white"></i>
+            <!-- <i class="devicon-github-plain" style="color: white"></i> -->
+            <img src="./images/github-original.svg" alt="GitHub logo">
             <p>GitHub</p>
             <div class="link-indicator"></div>
           </div>
@@ -235,7 +237,8 @@
             <img src="./images/external-link.svg" alt="External Link">
           </a>
           <a class="repo-link" href="https://github.com/sriram-siv/ga-project-4-volunteerhub" target="_blank" tabindex="-1">
-            <i class="devicon-github-plain" style="color: white"></i>
+            <!-- <i class="devicon-github-plain" style="color: white"></i> -->
+            <img src="./images/github-original.svg" alt="GitHub logo">
           </a>
         </div>
         <button class="project-selector prev-project">
