updating vol-hub links

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
       </section>
       <div class="carousel-header">
         <div class="project-links">
-          <a class="app-link" href="https://volunteershub.herokuapp.com/" target="_blank" tabindex="-1">
+          <a class="app-link" href="https://vol-hub.herokuapp.com/" target="_blank" tabindex="-1">
             <img src="./images/external-link.svg" alt="External Link">
           </a>
-          <a class="repo-link" href="https://github.com/sriram-siv/ga-project-4-volunteerhub" target="_blank" tabindex="-1">
+          <a class="repo-link" href="https://github.com/sriram-siv/volunteer-hub" target="_blank" tabindex="-1">
             <!-- <i class="devicon-github-plain" style="color: white"></i> -->
             <img src="./images/github-original.svg" alt="GitHub logo">
           </a>
